Publishing to gh-pages (publish.sh)

--- a/about/index.html
+++ b/about/index.html
@@ -91,14 +91,14 @@
       <div class="content-column-content">
          <h1>Impressum</h1>
          <h3 id="angaben-gemäß--5-tmg">Angaben gemäß § 5 TMG</h3>
-<p>Tomasz Bobinski<br>
-Bobikon<br>
-Pfinzstraße 42<br>
+<p>Tomasz Bobinski
+Bobikon
+Pfinzstraße 42
 76227 Karlsruhe</p>
 <h3 id="kontakt">Kontakt</h3>
 <p>E-Mail: <a href="mailto:bobikon2020@gmail.com">bobikon2020@gmail.com</a></p>
 <h3 id="redaktionell-verantwortlicher">Redaktionell Verantwortlicher</h3>
-<p>Tomasz Bobisnki</p>
+<p>Tomasz Bobinski</p>
 <h3 id="verbraucherstreitbeilegunguniversalschlichtungsstelle">Verbraucherstreitbeilegung/Universalschlichtungsstelle</h3>
 <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer
 Verbraucherschlichtungsstelle teilzunehmen.</p>
