--- a/contact/index.html
+++ b/contact/index.html
@@ -91,7 +91,7 @@
       <div class="content-column-content">
          <h1>Get in touch</h1>
          <h4 id="anschrift">Anschrift</h4>
-<p>Bobikon inhaber Tomasz Bobinski
+<p>Bobikon Inhaber Tomasz Bobinski
 Pfinzstraße 42
 76227 Karlsruhe</p>
 <h4 id="kontakt">Kontakt</h4>
